Se cambio de lugar el archivo de css

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Restaurant SASS</title>
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
     <div class="container">
         <header class="header">
             <nav class="nav">
                 <figure class="nav__logo-container">
-                    <a class="nav__log" href="#" class="logo"><img class="nav__img" src="/assets/img/luis-carrera_black.svg" alt="logo"></a>
+                    <a class="nav__log" href="#" class="logo"><img class="nav__img" src="assets/img/luis-carrera_black.svg" alt="logo"></a>
                 </figure>
                 <ul class="nav__links-container">
                     <li class="nav__links-list"><a class="nav__link" href="#">¿Por qué Fode?</a></li>
@@ -50,7 +50,7 @@
                 </div>
 
                 <figure class="picture-food col-70">
-                    <img class="picture-food__img" src="/assets/img/food.png" alt="imagen de comida">
+                    <img class="picture-food__img" src="assets/img/food.png" alt="imagen de comida">
                 </figure>
             </div>
         </main>
